30 April 2014: Wouter
	- Fix that xfrd reaps all children on every eventloop, because some
	  exited reloads may attach here and need reaping, also if the signal
	  is lost.

23 April 2014: Wouter
	- Fix progress printout for very large zones (numeric overflow).

10 April 2014: Wouter
	- Fix write_socket return value check in server.c (Thanks Brad Smith,
	  Mark Kettenis).

8 April 2014: Wouter
	- nsd-control addzone reports if zone already exists.

7 April 2014: Wouter
	- Fix #571: unused variable and incompatible pointer warnings when
	  compiled on a system without INET6.

27 March 2014: Wouter
	- Fix delete or rename of a lot of zones and make it take a
	  non-enormous time.  Database compaction is deferred.
	- Speed up deletion of zone contents a lot, (56s to 1s), speeds up
	  delete, rename and AXFR for zones.  Defer emptynonterminal checks.
	- Better example config in nsd.conf manual page.
	- log-time-ascii option, default yes, with readable timestamp in log.

25 March 2014: Wouter
	- nsd shuts down during init process if given signal.
	- shorter logging for zone transfer fail rcodes.

24 March 2014: Wouter
	- include: "foo/nsd.d/*.conf" works, wildcard glob on includes.
	- Fix print filename of encompassing config file on read failure.

21 March 2014: Wouter
	- Fix bug in nodatabase mode with ixfrs that change nsec3param
	  (Thanks Anand Buddhdev).
	- Changed maxbackoff for no-content secondary zones from 4h to 24h.
	- nocontent zones are checked on startup, but continue backoff
	  from stored xfrd.state values.

19 March 2014: Wouter
	- made database: "" set the 3600 default for zonefileswrite only
	  if it is also at its default, so that user settings override.
	- Unit test for zonefiles-write.
	- Write xfrd.state for nodb mode again.  Disable xfrd.state with
	  xfrdfile: "" in config.  Does not check slave zone if state is
	  same as last time on startup.
	- Fixed shutdown message sporadically not printed on exit.