@@ -1,3 +1,6 @@
+7 May 2014: Wouter
+	- Fix #577: makefile incorrectly installed manpages from srcdir.
+
 30 April 2014: Wouter
 	- Fix that xfrd reaps all children on every eventloop, because some
 	  exited reloads may attach here and need reaping, also if the signal
